# PastryCalc

./: .gitignore  README.md  build_windows.bat  pastrycalc_wine.spec  pyproject.toml  requirements.txt  run.py
src/: main.py
src/data/: categories.json  ingredients.json
src/engine/: __init__.py  calculator.py  validator.py
src/io/: __init__.py  export.py  file_manager.py
src/models/: __init__.py  category.py  ingredient.py  recipe.py
src/ui/: analysis_tab.py  app.py  dialogs.py  ingredients_tab.py  recipe_tab.py  theme.py
tests/: test_calculator.py  test_file_manager.py  test_ingredient.py  test_integration.py  test_recipe.py  test_validator.py
