[project]
name = "pastrycalc"
version = "1.0.0"
description = "Calculadora profesional de pastelería - análisis de recetas por composición"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "PastryCalc Team"}]
dependencies = [
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyinstaller>=6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
